# paper_mario_origami_king_ai

./: .gitignore  Cargo.toml  README.md
android_app/: Cargo.toml
android_app/src/: lib.rs
game_logic/: Cargo.toml
game_logic/src/: arena.rs  lib.rs  main.rs  position.rs  solving.rs
gui/: Cargo.toml  build.rs
gui/resources/shader/: coordinate.wgsl  shader.wgsl  test.wgsl  texture_shader.wgsl
gui/resources/shader/util/: coordinates.wgsl
gui/resources/shader/util/coordinates/: p_clip.wgsl  p_tex_coords.wgsl  pixel.wgsl  rect.wgsl  size.wgsl
gui/src/: app_state.rs  lib.rs  main.rs  renderer.rs  resources.rs  shader.rs
gui/src/renderer/: coordinates.rs  pipelines.rs
gui/src/renderer/coordinates/: circle_center.rs  p_clip.rs  p_tex_coords.rs  pixel.rs  rect.rs  size.rs
gui/src/renderer/pipelines/: texture_pipeline.rs
shader_pre_processor/: Cargo.toml
shader_pre_processor/src/: declaration.rs  environment.rs  lib.rs  memory_layout.rs  pre_processing_cache.rs  primitive_composition.rs  struct_definition.rs  struct_layout.rs  type_analysis.puml  type_analysis.rs
shader_pre_processor/src/primitive_composition/: composite_type.rs  primitive_type.rs
shader_pre_processor/src/type_analysis/: composite_type.rs  declared_type.rs  defined_type.rs  member.rs  named_type.rs  primitive_type.rs  source_location.rs  type_declaration.rs
src/: main.rs
