[package]
name = "android_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gui = {path = "../gui"}
winit = { version = "0.30.4", features = ["android-native-activity"] }

[package.metadata.android]
package = "steptech.papermarioorigamikingai"
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
apk_name = "paper_mario_origami_king_ai"
label = "Paper Mario: The Origami King AI"
icon = "app_icon.png"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.signing.release]
path = "keystore.jks"
keystore_password = "steptech"
