[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
game_logic = {path = "../game_logic"} # backend
winit = { version = "0.30", features = ["android-native-activity"] } # window management
wgpu = "22.0" # gpu + shaders
env_logger = "0.11" # log gui errors
pollster = "0.3" # block on async methods
image = { version = "0.25", features = ["png"], default-features = false } # process image files
bytemuck = { version = "1.16", features = ["derive"] } # convert data to bytes
encase = { version = "0.9", features = ["glam"] } # idk, but something with wgsl
glam = { version = "0.28", features = ["bytemuck"] } # matrices and vectors

[build-dependencies]
wgsl_to_wgpu = "0.9.0" # parse shaders at compile time
shader_pre_processor = { path = "../shader_pre_processor" }
